--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body{
-    background-color: #cfecec;
+    background-color: #eec0c6;
+    background-image: linear-gradient(315deg, #eec0c6 0%, #7ee8fa 74%);
 }
 ul{
     display: flex;
@@ -21,7 +22,6 @@ ul li a{
     color: white;
     overflow: hidden;
 }
-
 li:hover  a{
     color: goldenrod;
     opacity: 95%;
